Replace anemic Customer/Beer/Order records with rich, self-validating DDD aggregates
Business rules and construction logic move from the *Service transaction-script
layer into the aggregates themselves (factory methods, invariants, state-transition
behavior), shrinking Customers/Beers/Orders to thin orchestration. Adds Customer
lifecycle status and Order line-item snapshots (name/price/quantity via a new
shared Money kernel type) as genuine new domain concepts, while keeping the
REST/SOAP wire contract unchanged. Also fixes a latent bug where a beer could only
ever appear in one order system-wide (stray unique constraint on beer_order_beers).