@@ -4,9 +4,12 @@ import dev.ronin.demo.beerstore.order.api.OrderStatus;
 import dev.ronin.demo.beerstore.order.api.PlaceOrderCommand;
 import dev.ronin.demo.beerstore.order.api.UnknownBeerException;
 import dev.ronin.demo.beerstore.order.internal.application.port.out.BeerLookup;
+import dev.ronin.demo.beerstore.order.internal.application.port.out.BeerSnapshot;
 import dev.ronin.demo.beerstore.order.internal.application.port.out.CustomerLookup;
 import dev.ronin.demo.beerstore.order.internal.application.port.out.OrderRepository;
 import dev.ronin.demo.beerstore.order.internal.domain.model.Order;
+import dev.ronin.demo.beerstore.order.internal.domain.model.OrderLine;
+import dev.ronin.demo.beerstore.shared.kernel.Money;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -14,6 +17,7 @@ import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.ApplicationEventPublisher;
 
+import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
 
@@ -41,8 +45,10 @@ class OrdersTest {
     @Test
     @DisplayName("When creating a new order it should have \"New\" status")
     void whenCreatingNewOrderItHasNewStatus() {
-        Order expected = new Order(1L, OrderStatus.NEW, 1L, List.of(1L));
-        given(beerLookup.findExistingIds(Collections.singletonList(1L))).willReturn(List.of(1L));
+        BeerSnapshot snapshot = new BeerSnapshot(1L, "Csoda IPA", new Money(new BigDecimal("2.50")));
+        Order expected = new Order(1L, OrderStatus.NEW, 1L,
+                List.of(new OrderLine(1L, "Csoda IPA", new Money(new BigDecimal("2.50")), 1)));
+        given(beerLookup.findExisting(List.of(1L))).willReturn(List.of(snapshot));
         given(orderRepository.save(Mockito.any())).willReturn(expected);
         Orders orders = new Orders(orderRepository, beerLookup, customerLookup, eventPublisher);
 
@@ -57,7 +63,7 @@ class OrdersTest {
     @Test
     @DisplayName("When an order references an unknown beer it should be rejected")
     void whenOrderReferencesUnknownBeerItIsRejected() {
-        given(beerLookup.findExistingIds(Collections.singletonList(99L))).willReturn(Collections.emptyList());
+        given(beerLookup.findExisting(List.of(99L))).willReturn(Collections.emptyList());
         Orders orders = new Orders(orderRepository, beerLookup, customerLookup, eventPublisher);
 
         org.assertj.core.api.Assertions.assertThatThrownBy(
